# weird-o

./: .gitignore  pyproject.toml  try.py
meshify/: __main__.py  mesh.py
